--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,8 +37,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: "./html"
-          index: true
+          path: html
+          name: github-pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
